fixed spacing on main page

--- a/style.css
+++ b/style.css
@@ -1410,12 +1410,13 @@ width:1rem;
     font-size: 3.5rem;
     padding: 14.5% 12px;
     position: absolute;
-    bottom: -127px;
+    bottom: 100px;
     width: 100%;
     text-align: center;
     text-transform: uppercase;
     font-weight: 400;
 }
+
 
 .meet-team{
     position: absolute;
@@ -1901,6 +1902,7 @@ width:1rem;
     .banner-text{
         font-size: 2.25rem;
         padding: 75.5% 12px;
+        bottom: -127px;
     }
     .banner-paragraph{
         font-size: 1.8rem;
